--- a/Projet about Segmentation and Clustering Neighborhoods in Toronto.ipynb
+++ b/Projet about Segmentation and Clustering Neighborhoods in Toronto.ipynb
@@ -2244,11 +2244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 117,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-03-05T12:47:51.908351Z",
-     "start_time": "2020-03-05T12:47:51.903301Z"
+     "end_time": "2020-03-05T13:31:06.098885Z",
+     "start_time": "2020-03-05T13:31:06.094886Z"
     }
    },
    "outputs": [
@@ -2257,14 +2257,14 @@
      "output_type": "stream",
      "text": [
       "Your credentails:\n",
-      "CLIENT_ID: BNCN3SN0KUKUW1PUHNHL44SK2KW04IXYXXDFWSGI4M2XQ0XO\n",
-      "CLIENT_SECRET:SLNTVBPDR1STADUPHFTJMJEICNZ3EEPX5WZ45Q5LKEMRVWOC\n"
+      "CLIENT_ID: X\n",
+      "CLIENT_SECRET:X\n"
      ]
     }
    ],
    "source": [
-    "CLIENT_ID = 'BNCN3SN0KUKUW1PUHNHL44SK2KW04IXYXXDFWSGI4M2XQ0XO'     # Foursquare ID\n",
-    "CLIENT_SECRET = 'SLNTVBPDR1STADUPHFTJMJEICNZ3EEPX5WZ45Q5LKEMRVWOC' # Foursquare Secret\n",
+    "CLIENT_ID = 'X'     # Foursquare ID\n",
+    "CLIENT_SECRET = 'X' # Foursquare Secret\n",
     "VERSION = '20180604'\n",
     "LIMIT = 30\n",
     "print('Your credentails:')\n",
@@ -3106,7 +3106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analyzing Each Neighborhood of Central Toronto"
+    "# Analyze Each Neighborhood of Central Toronto"
    ]
   },
   {
@@ -5043,9 +5043,14 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "212.882px"
+   },
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   },
   "varInspector": {
    "cols": {
